--- a/autenticacao/templates/password_reset_confirm_view.html
+++ b/autenticacao/templates/password_reset_confirm_view.html
@@ -8,18 +8,16 @@
 {% endblock %}
 {%block 'body'%}
     <div class='box'>
-        <form action="{% url 'password_reset' %}" method="POST">{% csrf_token %}
-            <h1 class="titulo font-degrade borda-bottom-degrade">Recuperar</h2><br>
+
+        <form action="" method="POST">{%csrf_token%}
             {{form}}
-            <br>
-            <br>
-            <input type="submit" value="Recuperar" class="btn btn-success btn-lg">
+            <input type="submit" value="enviar" class="btn btn-success btn-lg">
             {% if form.errors %}
                 {{form.errors}}
             {% endif %}
-
-        
+            
         </form>
+
 
     </div>
 {% endblock%}
