--- a/autenticacao/templates/password_reset_done.html
+++ b/autenticacao/templates/password_reset_done.html
@@ -1,1 +1,13 @@
-Enviamos para o seu email um link para alteração da senha.
+{% extends 'base.html' %}
+{% load static %}
+
+{% block 'head' %}
+<link rel="stylesheet" href="{% static 'autenticacao/css/cadastro.css' %}">
+
+
+{% endblock %}
+{% block 'body'  %}
+    <div class='box'>
+     <span class="span-descricao">Enviamos para o seu email um link para alteração da senha.</span>
+    </div>
+{% endblock  %}
