--- a/autenticacao/templates/password_reset_complete.html
+++ b/autenticacao/templates/password_reset_complete.html
@@ -1,3 +1,14 @@
-Sua senha foi resetada com sucesso
+{% extends 'base.html' %}
+{% load static %}
 
-<a href="{% url 'logar' %}">CLIQUE AQUI</a> para acessar sua conta.
+{% block 'head' %}
+<link rel="stylesheet" href="{% static 'autenticacao/css/cadastro.css' %}">
+
+
+{% endblock %}
+{% block 'body'  %}
+    <div class='box'>
+     <span class="span-descricao">Sua senha foi resetada com sucesso</span>
+     <h6 class="titulo-body"> <a href="{% url 'logar' %}">CLIQUE AQUI</a> para acessar sua conta. </h6>
+    </div>
+{% endblock  %}
